--- a/SecurityManager/app/src/main/res/layout/activity_checkpost.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_checkpost.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     tools:context="com.softel.securitymanager.securitymanager.CheckPostView">
 
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,9 +16,9 @@
         app:tabIndicatorHeight="5dp"
         app:tabTextColor="@color/headerText">
 
-    </android.support.design.widget.TabLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="370dp"
         android:layout_height="455dp"
@@ -26,4 +26,4 @@
         app:layout_constraintTop_toBottomOf="@+id/tabLayout"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="8dp" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
