--- a/SecurityManager/app/src/main/res/layout/activity_homepage.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_homepage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginRight="5dp"
@@ -96,9 +96,9 @@
 
 
                                     </RelativeLayout>
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginLeft="5dp"
@@ -137,7 +137,7 @@
 
 
                                     </RelativeLayout>
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
 
                             </LinearLayout>
@@ -148,7 +148,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginRight="5dp"
@@ -187,9 +187,9 @@
 
 
                                     </RelativeLayout>
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginLeft="5dp"
@@ -227,7 +227,7 @@
                                             android:textStyle="bold" />
 
                                     </RelativeLayout>
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
 
                             </LinearLayout>
@@ -239,7 +239,7 @@
                                 android:layout_marginBottom="5dp"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginRight="5dp"
@@ -277,9 +277,9 @@
                                             android:textStyle="bold" />
 
                                     </RelativeLayout>
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginLeft="5dp"
@@ -317,7 +317,7 @@
                                             android:textStyle="bold" />
 
                                     </RelativeLayout>
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
 
                             </LinearLayout>
@@ -408,7 +408,7 @@
 
 
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         app:headerLayout="@layout/header"
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -419,6 +419,6 @@
         app:menu="@menu/drawer_menu"
         android:layout_gravity="start">
 
-    </android.support.design.widget.NavigationView>
+    </com.google.android.material.navigation.NavigationView>
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
