--- a/SecurityManager/app/src/main/res/layout/activity_news.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_news.xml
@@ -19,7 +19,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -35,7 +35,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
     </LinearLayout>
