--- a/SecurityManager/app/src/main/res/layout/activity_staff__check_in.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_staff__check_in.xml
@@ -31,7 +31,7 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cstaffdetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
                     android:layout_marginTop="30dp"
                     android:orientation="vertical">
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/view2"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
@@ -93,7 +93,7 @@
                             android:layout_height="80dp" />
 
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
@@ -590,7 +590,7 @@
             </RelativeLayout>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/lViewlatestHistory"
