--- a/SecurityManager/app/src/main/res/layout/activity_staff_add.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_staff_add.xml
@@ -157,7 +157,7 @@
                 android:orientation="vertical"
                 android:visibility="visible">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/AddStaffCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -569,7 +569,7 @@
                         </RelativeLayout>
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
@@ -603,7 +603,7 @@
                 android:orientation="vertical"
                 android:visibility="gone">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/staffContact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -759,7 +759,7 @@
                             </LinearLayout>
                         </RelativeLayout>
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
             <!--    Document Section  -->
             <LinearLayout
@@ -790,7 +790,7 @@
                 android:orientation="vertical"
                 android:visibility="gone">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/DocCord"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -1863,7 +1863,7 @@
 
                         </RelativeLayout>
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
         </RelativeLayout>
