--- a/SecurityManager/app/src/main/res/layout/activity_staff_exit.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_staff_exit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -25,7 +25,7 @@
                 android:layout_marginRight="2dp"
                 android:orientation="horizontal">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:layout_marginLeft="2dp"
@@ -57,9 +57,9 @@
                         android:paddingTop="40dp"
                         android:textColor="@color/tintchange"
                         android:textSize="36sp" />
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="110dp"
                     android:layout_height="100dp"
                     android:layout_marginRight="2dp"
@@ -94,9 +94,9 @@
                         android:paddingTop="40dp"
                         android:textColor="@color/tintchange"
                         android:textSize="36sp" />
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_marginLeft="2dp"
@@ -131,7 +131,7 @@
                         android:paddingTop="40dp"
                         android:textColor="@color/tintchange"
                         android:textSize="36sp" />
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
             <LinearLayout
@@ -216,7 +216,7 @@
         </RelativeLayout>
     </ScrollView>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -230,4 +230,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
