--- a/SecurityManager/app/src/main/res/layout/activity_staffview.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_staffview.xml
@@ -58,7 +58,7 @@
             android:orientation="horizontal">
 
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/cd1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                     android:layout_marginTop="10dp"
                     android:orientation="vertical">
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/view2"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
@@ -93,7 +93,7 @@
                             android:layout_height="80dp" />
 
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
@@ -427,7 +427,7 @@
 
                 </RelativeLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
 
