--- a/SecurityManager/app/src/main/res/layout/activity_total_staffexit.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_total_staffexit.xml
@@ -70,7 +70,7 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingBtnAddStaff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
