--- a/SecurityManager/app/src/main/res/layout/activity_visitor_entry.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_visitor_entry.xml
@@ -83,7 +83,7 @@
                     android:layout_height="match_parent"
                     android:layout_below="@id/EntryDocType">
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/cardnum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -113,7 +113,7 @@
                             android:text="@string/fetch"
                             android:textColor="@color/ic_launcher_background"
                             android:textStyle="bold" />
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
             </RelativeLayout>
@@ -126,7 +126,7 @@
                 android:orientation="horizontal"
                 android:visibility="gone">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     segmentedgroup:cardCornerRadius="15dp">
@@ -291,7 +291,7 @@
                             android:orientation="horizontal">
 
 
-                            <android.support.v7.widget.CardView
+                            <androidx.cardview.widget.CardView
                                 android:id="@+id/selectimage"
                                 android:layout_width="130dp"
                                 android:layout_height="wrap_content"
@@ -315,7 +315,7 @@
                                     android:paddingTop="3dp"
                                     android:text="@string/select_image"
                                     android:textColor="@color/white" />
-                            </android.support.v7.widget.CardView>
+                            </androidx.cardview.widget.CardView>
 
                         </LinearLayout>
 
@@ -447,7 +447,7 @@
                                 android:textSize="14sp" />
                         </LinearLayout>
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
             <!-- Expeceted Visitor Section -->
@@ -464,7 +464,7 @@
                 android:visibility="visible">
 
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <!-- Repeted Visitor Section -->
@@ -479,7 +479,7 @@
                             android:layout_width="80dp"
                             android:layout_height="80dp">
 
-                            <android.support.v7.widget.CardView
+                            <androidx.cardview.widget.CardView
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:layout_marginLeft="10dp"
@@ -492,7 +492,7 @@
                                     android:layout_width="95dp"
                                     android:layout_height="65dp"
                                     android:layout_gravity="center" />
-                            </android.support.v7.widget.CardView>
+                            </androidx.cardview.widget.CardView>
 
                         </RelativeLayout>
 
@@ -618,7 +618,7 @@
 
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
                 <!--  Show Text Only Visitor Already Exist -->
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -762,7 +762,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -807,7 +807,7 @@
                             android:textColor="@color/ic_launcher_background"
                             android:textStyle="bold"
                             android:visibility="gone" />
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
                 </RelativeLayout>
 
             </LinearLayout>
@@ -839,7 +839,7 @@
                 android:visibility="gone">
 
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/selectimagenew"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
@@ -863,7 +863,7 @@
                         android:paddingTop="3dp"
                         android:text="@string/select_image"
                         android:textColor="@color/white" />
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
@@ -877,7 +877,7 @@
                 android:paddingTop="10dp"
                 android:visibility="gone">
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/cardbtnabove"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -1028,7 +1028,7 @@
 
                     </RelativeLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
