--- a/SecurityManager/app/src/main/res/layout/activity_visitor_exit.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_visitor_exit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             android:layout_below="@+id/search" />
     </RelativeLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
 
         android:layout_width="wrap_content"
@@ -53,4 +53,4 @@
         android:layout_marginBottom="16dp"
         android:src="@mipmap/visitorreport"
         app:backgroundTint="@color/header" />
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
