--- a/SecurityManager/app/src/main/res/layout/activity_visitor_unit.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_visitor_unit.xml
@@ -214,7 +214,7 @@
                         android:orientation="horizontal">
 
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/txtsendforapproval"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -232,7 +232,7 @@
                                 android:paddingRight="10dp"
                                 android:text="@string/send_for_approval"
                                 android:textColor="@color/white" />
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
@@ -438,7 +438,7 @@
                         android:orientation="horizontal">
 
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/txtsendforapproval1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -456,7 +456,7 @@
                                 android:paddingRight="10dp"
                                 android:text="@string/send_for_approval"
                                 android:textColor="@color/white" />
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
@@ -659,7 +659,7 @@
                         android:orientation="horizontal">
 
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/txtsendforapproval2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -677,7 +677,7 @@
                                 android:paddingRight="10dp"
                                 android:text="@string/send_for_approval"
                                 android:textColor="@color/white" />
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
@@ -881,7 +881,7 @@
                         android:orientation="horizontal">
 
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/txtsendforapproval3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -899,7 +899,7 @@
                                 android:paddingRight="10dp"
                                 android:text="@string/send_for_approval"
                                 android:textColor="@color/white" />
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
@@ -1278,7 +1278,7 @@
                             android:orientation="vertical"
                             android:background="@drawable/rectangle"
                             android:visibility="visible">
-                            <android.support.v4.widget.NestedScrollView
+                            <androidx.core.widget.NestedScrollView
                                 android:layout_width="match_parent"
                                 android:id="@+id/scrollunit0"
                                 android:layout_height="match_parent"
@@ -1294,7 +1294,7 @@
                                     android:layout_gravity="center_horizontal"
                                     android:alignmentMode="alignBounds">
                                 </GridLayout>
-                            </android.support.v4.widget.NestedScrollView>
+                            </androidx.core.widget.NestedScrollView>
 
 
                         </LinearLayout>
@@ -1491,7 +1491,7 @@
                             android:orientation="vertical"
                             android:background="@drawable/rectangle"
                             android:visibility="visible">
-                            <android.support.v4.widget.NestedScrollView
+                            <androidx.core.widget.NestedScrollView
                                 android:layout_width="match_parent"
                                 android:id="@+id/scrollunit"
                                 android:layout_height="match_parent"
@@ -1507,7 +1507,7 @@
                                     >
                                 </GridLayout>
 
-                            </android.support.v4.widget.NestedScrollView>
+                            </androidx.core.widget.NestedScrollView>
 
 
                         </LinearLayout>
@@ -1701,7 +1701,7 @@
                             android:orientation="vertical"
                             android:background="@drawable/rectangle"
                             android:visibility="visible">
-                            <android.support.v4.widget.NestedScrollView
+                            <androidx.core.widget.NestedScrollView
                                 android:layout_width="match_parent"
                                 android:id="@+id/scrollunit2"
                                 android:layout_height="200dp"
@@ -1716,7 +1716,7 @@
                                     android:alignmentMode="alignBounds">
 
                                 </GridLayout>
-                            </android.support.v4.widget.NestedScrollView>
+                            </androidx.core.widget.NestedScrollView>
 
 
                         </LinearLayout>
@@ -1910,7 +1910,7 @@
                             android:orientation="vertical"
                             android:background="@drawable/rectangle"
                             android:visibility="visible">
-                            <android.support.v4.widget.NestedScrollView
+                            <androidx.core.widget.NestedScrollView
                                 android:layout_width="match_parent"
                                 android:id="@+id/scrollunit3"
                                 android:layout_height="200dp"
@@ -1925,7 +1925,7 @@
                                     android:alignmentMode="alignBounds">
 
                                 </GridLayout>
-                            </android.support.v4.widget.NestedScrollView>
+                            </androidx.core.widget.NestedScrollView>
 
 
                         </LinearLayout>
