--- a/SecurityManager/app/src/main/res/layout/activity_visitordetails.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_visitordetails.xml
@@ -57,7 +57,7 @@
             android:layout_below="@id/headgate"
             android:orientation="horizontal">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/cd1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
                     android:layout_marginTop="10dp"
                     android:orientation="vertical">
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/view2"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
@@ -94,7 +94,7 @@
                             android:layout_height="80dp" />
 
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
@@ -509,7 +509,7 @@
                             android:textColor="#fff" />
                     </LinearLayout>
                 </RelativeLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
             <RelativeLayout
                 android:id="@+id/latest"
