--- a/SecurityManager/app/src/main/res/layout/activity_welcomevisit.xml
+++ b/SecurityManager/app/src/main/res/layout/activity_welcomevisit.xml
@@ -9,7 +9,7 @@
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/card1"
@@ -297,7 +297,7 @@
 
     </ListView>
 </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
     <RelativeLayout
