--- a/SecurityManager/app/src/main/res/layout/allexpected.xml
+++ b/SecurityManager/app/src/main/res/layout/allexpected.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingBottom="10dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -287,7 +287,7 @@
                     android:textStyle="bold" />
             </LinearLayout>
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
