--- a/SecurityManager/app/src/main/res/layout/staff_entry_with_id.xml
+++ b/SecurityManager/app/src/main/res/layout/staff_entry_with_id.xml
@@ -77,7 +77,7 @@
                 android:visibility="gone" />
 
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/cstaffid"
 
                 android:layout_width="match_parent"
@@ -216,7 +216,7 @@
                         android:layout_gravity="bottom"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
 
