--- a/SecurityManager/app/src/main/res/layout/staff_fingerprint.xml
+++ b/SecurityManager/app/src/main/res/layout/staff_fingerprint.xml
@@ -76,7 +76,7 @@
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/view2"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
@@ -93,7 +93,7 @@
                     android:layout_height="80dp" />
 
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
