--- a/SecurityManager/app/src/main/res/layout/total_staff.xml
+++ b/SecurityManager/app/src/main/res/layout/total_staff.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -61,7 +61,7 @@
             android:layout_marginLeft="10dp"
             android:orientation="horizontal">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/view2"
                 android:layout_width="70dp"
                 android:layout_height="80dp"
@@ -77,7 +77,7 @@
                     android:background="@color/white"/>
 
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
         <LinearLayout
@@ -230,5 +230,5 @@
 
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
