--- a/SecurityManager/app/src/main/res/layout/view_staff.xml
+++ b/SecurityManager/app/src/main/res/layout/view_staff.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="10dp"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/view2"
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -34,7 +34,7 @@
                 android:layout_height="80dp" />
 
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
