--- a/SecurityManager/app/src/main/res/layout/visitorexitlistview.xml
+++ b/SecurityManager/app/src/main/res/layout/visitorexitlistview.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="220dp"
         android:layout_marginBottom="10dp"
@@ -53,7 +53,7 @@
             android:layout_marginTop="45dp"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/view2"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
@@ -72,7 +72,7 @@
                     android:background="@color/headerText" />
 
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
@@ -269,5 +269,5 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
