--- a/SecurityManager/app/src/main/res/menu/menu_search.xml
+++ b/SecurityManager/app/src/main/res/menu/menu_search.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/menu_toolbarsearch"
         app:showAsAction="always"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="" />
 </menu>
